--- a/HTML-CSS/odin-recipes/index.html
+++ b/HTML-CSS/odin-recipes/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>A Sample Recipe</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="recipes/lasagna.html">Lasagna Recipe</a>
     
 </body>
 </html>
