Added a hypertext refence as well as a h2 title describing the image

--- a/HTML-CSS/odin-recipes/recipes/lasagna.html
+++ b/HTML-CSS/odin-recipes/recipes/lasagna.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Lasagna Recipe</h1>
-    
+    <img src="https://www.allrecipes.com/thmb/LAdOWGVNbtOWgbojigiTBzX_Ld0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/3359675-9ce441a8b5c7438ba43780987f652505.jpg">
+    <h2 > Creamy chicken Lasagna</h2> 
+    <p>Ingredients</p> 
 </body>
 </html>
