Added an unordered list with list items conataining the recipe ingredients

--- a/HTML-CSS/odin-recipes/recipes/lasagna.html
+++ b/HTML-CSS/odin-recipes/recipes/lasagna.html
@@ -10,6 +10,16 @@
     <h1>Lasagna Recipe</h1>
     <img src="https://www.allrecipes.com/thmb/LAdOWGVNbtOWgbojigiTBzX_Ld0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/3359675-9ce441a8b5c7438ba43780987f652505.jpg">
     <h2 > Creamy chicken Lasagna</h2> 
-    <p>Ingredients</p> 
+    <p>Delicious layers of tender lasagna noodles, homemade tomato sauce, a creamy cheese filling, and flavorful ingredients come together to create a comforting and indulgent lasagna.</p>
+    <h2>Ingredients</h2> 
+    <ul>
+        <li>6 uncooked lasagna noodles</li>
+        <li>3 skinless, boneless chicken breast halves</li>
+        <li>2 cups shredded mozzarella cheese, divided</li>
+        <li>1 (8 ounce) package cream cheese, softened</li>
+        <li>¼ cup hot water</li>
+        <li>1 cube chicken bouillon</li>
+        <li>1 (26 ounce) jar spaghetti sauce</li>
+    </ul>
 </body>
 </html>
