Added an illustration image at the end of step 6 in lasagna.html

--- a/HTML-CSS/odin-recipes/recipes/lasagna.html
+++ b/HTML-CSS/odin-recipes/recipes/lasagna.html
@@ -57,6 +57,7 @@
         <li>
             <h3>Step 6</h3>
             <p>Bake in the preheated oven for 45 minutes.</p>
+            <img src="https://www.allrecipes.com/thmb/oAV1s4BNtV66I9xk4LEYnRwIF7Y=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/2124654-ef7540d37d344e0c954016164155d423.jpg">
         </li>
     </ol>
 </body>
