The unorderd list in lemon-tilapia.html is filled with necessary content

--- a/HTML-CSS/odin-recipes/recipes/lemon-tilapia.html
+++ b/HTML-CSS/odin-recipes/recipes/lemon-tilapia.html
@@ -13,41 +13,41 @@
     <p>Indulge in the delightful flavors of Broiled Parmesan-Lemon Tilapia, where tender tilapia fillets are coated in a zesty blend of Parmesan cheese and fresh lemon, then broiled to golden perfection</p>
     <h2>Ingredients</h2>
     <ul>
-        <li></li>
+        <li>4 (4 ounce) tilapia fillets</li>
 
 
-        <li></li>
+        <li>2 tablespoons Miami-style sazon seasoning (sazon completa)</li>
 
 
-        <li></li>
+        <li>1 serving olive oil cooking spray (such as PAM®)</li>
 
 
-        <li></li>
+        <li>½ cup grated Parmesan cheese</li>
 
 
-        <li></li>
+        <li>2 tablespoons butter-margarine blend (such as Smart Balance®), melted</li>
 
 
-        <li></li>
+        <li>1 ½ tablespoons fat-free mayonnaise (such as Kraft®)</li>
 
 
-        <li></li>
+        <li>2 tablespoons lemon juice</li>
 
 
-        <li></li>
+        <li>2 teaspoons grated lemon zest</li>
 
 
-        <li></li>
+        <li>⅛ teaspoon dried basil</li>
 
 
-        <li></li>
+        <li>⅛ teaspoon ground black pepper</li>
 
 
-        <li></li>
+        <li>⅛ teaspoon onion powder</li>
 
 
-        
-        <li></li>
+
+        <li>⅛ teaspoon celery salt</li>
     </ul>
 </body>
 </html>
