--- a/HTML-CSS/odin-recipes/index.html
+++ b/HTML-CSS/odin-recipes/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <a href="recipes/lemon-tilapia.html">Lemon Tilapia Recipe</a>
     
 </body>
 </html>
