Completed the recipe steps

--- a/HTML-CSS/odin-recipes/recipes/lemon-tilapia.html
+++ b/HTML-CSS/odin-recipes/recipes/lemon-tilapia.html
@@ -49,5 +49,41 @@
 
         <li>⅛ teaspoon celery salt</li>
     </ul>
+
+
+
+    <h2>Steps</h2>
+
+    <ol>
+
+        <li>
+            <p>Preheat the oven's broiler and set the oven rack about 6 inches from the heat source. Line a broiler pan with aluminum foil. Spray the broiler pan's rack with olive oil cooking spray.</p>
+        </li>
+
+
+
+        <li>
+            <p>Sprinkle tilapia with sazon seasoning and arrange on the prepared broiler rack.</p>
+        </li>
+
+
+        <li>
+            <p>Cook the fillets under the preheated broiler until fish is barely opaque, 2 to 3 minutes per side.</p>
+        </li>
+
+
+        <li>
+            <p>Mix the Parmesan cheese, butter-margarine blend, fat-free mayonnaise, lemon juice, lemon zest, basil, black pepper, onion powder, and celery salt together in a bowl.</p>
+        </li>
+
+
+        <li>
+            <p>Spread the Parmesan cheese blend over the fish fillets, return to oven, and continue cooking until the topping is golden brown and the fish flakes easily, 3 to 5 more minutes.</p>
+        </li>
+
+
+    </ol>
+
+
 </body>
 </html>
