Added a new file beef-stew.html alongside its boilerplate with h2, img and p tags: linked the file to index.html

--- a/HTML-CSS/odin-recipes/index.html
+++ b/HTML-CSS/odin-recipes/index.html
@@ -10,6 +10,7 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna Recipe</a>
     <a href="recipes/lemon-tilapia.html">Lemon Tilapia Recipe</a>
+    <a href="recipes/beef-stew.html">Beef Stew Recipe</a>
     
 </body>
 </html>
