The recipe's ingredients are ready

--- a/HTML-CSS/odin-recipes/recipes/beef-stew.html
+++ b/HTML-CSS/odin-recipes/recipes/beef-stew.html
@@ -11,5 +11,28 @@
     <img src="https://www.allrecipes.com/thmb/Zlw0IA0BxmigmkfeZuUkpdnFVjs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/2964964-7cee3f2a55c646dba9e975e138b0e841.jpg">
     <h2>World's Best Savory Beef Stew</h2>
     <p>Savor the comforting taste of a hearty Beef Stew, featuring tender chunks of beef simmered with aromatic herbs and vegetables, creating a rich and flavorful one-pot meal</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>3 tablespoons vegetable oil, divided</li>
+        <li>¼ cup flour</li>
+        <li>½ teaspoon paprika</li>
+        <li>½ teaspoon salt</li>
+        <li>¼ teaspoon pepper</li>
+        <li>¼ teaspoon cumin</li>
+        <li>¼ teaspoon dried Mexican oregano</li>
+        <li>¼ teaspoon garlic powder</li>
+        <li>2 pounds beef chuck roast, cubed</li>
+        <li>2 cloves garlic, crushed and minced</li>
+        <li>2 (14.5 ounce) cans Hunt's® Diced Tomatoes, divided</li>
+        <li>1 quart beef broth</li>
+        <li>2 bay leaves</li>
+        <li>½ teaspoon crushed red pepper flakes, or to taste</li>
+        <li>3 large red potatoes, quartered</li>
+        <li>2 large carrots, peeled and sliced</li>
+        <li>2 cups frozen corn</li>
+        <li>½ onion, diced</li>
+        <li>½ head cabbage, coarsely chopped</li>
+    </ul>
 </body>
 </html>
