--- a/HTML-CSS/odin-recipes/recipes/beef-stew.html
+++ b/HTML-CSS/odin-recipes/recipes/beef-stew.html
@@ -34,5 +34,28 @@
         <li>½ onion, diced</li>
         <li>½ head cabbage, coarsely chopped</li>
     </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>
+            <p>Pre-heat electric pressure cooker; add 1 tablespoon oil to the pot.</p>
+        </li>
+
+        <li>
+            <p>Mix flour, paprika, salt, pepper, cumin, oregano, and garlic powder together in a mixing bowl. Toss cubed beef with flour mixture. Brown beef cubes in 3 batches in preheated cooker about 8 minutes per batch, adding an additional tablespoon of oil after each batch. As beef browns, transfer it to a dish.</p>
+        </li>
+
+        <li>
+            <p>Add minced garlic and 1 can of Hunt's® diced tomatoes to the empty pot; scrape and stir to release the browned bits from the bottom. Add beef broth and bay leaves; transfer browned beef back to the pot. Seal pressure cooker, close the vent, and set the timer to cook at pressure for 10 minutes. At the end of 10 minutes, allow pressure to naturally release.</p>
+        </li>
+
+        <li>
+            <p>Once the pressure has fully released, open lid and add the remaining can of Hunt's® diced tomatoes, crushed red pepper flakes, quartered potatoes, carrots, corn, and onion. Close the lid and vent. Cook under pressure for an additional 15 minutes.</p>
+        </li>
+
+        <li>
+            <p>At the end of 15 minutes, use quick release to vent the pressure cooker. Stir in the diced cabbage, close the lid. Let pressure cooker stand with both the lid and vent closed for 10 minutes before serving.</p>
+        </li>
+    </ol>
 </body>
 </html>
